objects/Conga_Batch_Processing_Logs__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Name__c</fullName>
        <label>Batch Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Status__c</fullName>
        <label>Batch Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Reason__c</fullName>
        <label>Failure_Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Conga Batch Processing Logs</label>
    <nameField>
        <displayFormat>CBPF-{0000}</displayFormat>
        <label>Conga Batch Processing Logs	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Batch Processing Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>